--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form action="" method="post">
+		<label for="name">Name</label>
+		<input id="name" name="Name" type="text" minlength="3" maxlength="50" required><br/>
+		<label for="portfolio">Portfolio</label>
+		<input name="Portffolio" id="portfolio" type="url" required/><br/>
+		<label for="favColor">Favorite Color</label>
+		<input name="Favorite Color" id="favColor" type="color"><br/>
+		<label for="likeness">Likeness</label>
+		<input name="Likeness" id="likeness" type="range" min="1" max="100">
+<br>
+		<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
