--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 		<label for="portfolio">Portfolio</label>
 		<input name="Portffolio" id="portfolio" type="url" required/><br/>
 		<label for="favColor">Favorite Color</label>
-		<input name="Favorite Color" id="favColor" type="color"><br/>
+		<input name="Favorite Color" id="favColor" type="color" required><br/>
 		<label for="likeness">Likeness</label>
-		<input name="Likeness" id="likeness" type="range" min="1" max="100">
+		<input name="Likeness" id="likeness" type="range" min="1" max="100" required>
 <br>
 		<button type="submit">Submit</button>
 	</form>
